--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
-        run: actions/checkout@v5
+        uses: actions/checkout@v5
 
       - name: Maven test
         run: mvn test
