--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,6 @@ jobs:
         timeout-minutes: 5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_URL }} #OPTIONAL
+          SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
 
       
